attempt to fix tdf#95935 - CRASH on startup in o3tl vcl code

I suspect that the problem is the shift and that converting it
  "1UL <<"
will fix it

Change-Id: I4808b833453a544aeb732192758d323f358c3ab0